Add cct_module to the submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,7 @@
 	path = images/redhat-sso-7-openshift-image.git
 	url = git@github.com:jboss-container-images/redhat-sso-7-openshift-image.git
 	branch = sso71-dev
+[submodule "cct_module"]
+	path = images/cct_module
+	url = git@github.com:jboss-openshift/cct_module.git
+	branch = master
