--- a/.gitmodules
+++ b/.gitmodules
@@ -109,9 +109,12 @@
 [submodule "images/jboss-amq-7-image.git"]
 	path = images/jboss-amq-7-image.git
 	url = git@github.com:jboss-container-images/jboss-amq-7-image.git
+        branch = amq70-dev
 [submodule "images/jboss-bpmsuite-7-openshift-image"]
 	path = images/jboss-bpmsuite-7-openshift-image
 	url = git@github.com:jboss-container-images/jboss-bpmsuite-7-openshift-image.git
+        branch = bpmsuite70-dev
 [submodule "images/jboss-dataservices-image"]
 	path = images/jboss-dataservices-image
 	url = git@github.com:jboss-container-images/jboss-dataservices-image.git
+        branch = dataservices-dev
